fix Navbar overlapping issues

--- a/sources/src/main/webapp/css/components/modal-window.css
+++ b/sources/src/main/webapp/css/components/modal-window.css
@@ -1,5 +1,6 @@
 .modal {
 	position: absolute;
+	z-index: 2;
 	top: 0;
 	bottom: 0;
 	left: 0;
