--- a/sources/src/main/webapp/css/components/popover.css
+++ b/sources/src/main/webapp/css/components/popover.css
@@ -1,6 +1,6 @@
 .popover {
 	position: absolute;
-	z-index: 1;
+	z-index: 2;
 	font-family: 'Arial', sans-serif;
 	font-size: 1em;
 	background-color: #f8fafa;
