--- a/sources/src/main/webapp/css/components/popup.css
+++ b/sources/src/main/webapp/css/components/popup.css
@@ -1,6 +1,6 @@
 .popup {
 	position: absolute;
-	z-index: 1;
+	z-index: 2;
 	padding: 10px 20px;
 	border: 1px solid #999;
 	background: #fff;
