--- a/sources/src/main/webapp/css/components/sidebar.css
+++ b/sources/src/main/webapp/css/components/sidebar.css
@@ -1,5 +1,4 @@
 .sidebar {
-    z-index: 0;
 	display: flex;
 	flex-basis: 350px;
 	flex-direction: column;
