--- a/sources/src/main/webapp/css/components/spinloader.css
+++ b/sources/src/main/webapp/css/components/spinloader.css
@@ -1,5 +1,6 @@
 .spinloader {
 	position: absolute;
+	z-index: 3;
 	top: 0;
 	bottom: 0;
 	left: 0;
